; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_ide-cd_ioctl.c_ide_cd_read_tochdr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_ide-cd_ioctl.c_ide_cd_read_tochdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.cdrom_info* }
%struct.cdrom_info = type { %struct.atapi_toc* }
%struct.atapi_toc = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, i32 }
%struct.cdrom_tochdr = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i8*)* @ide_cd_read_tochdr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ide_cd_read_tochdr(%struct.TYPE_6__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.cdrom_info*, align 8
  %7 = alloca %struct.cdrom_tochdr*, align 8
  %8 = alloca %struct.atapi_toc*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i8* %1, i8** %5, align 8
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = load %struct.cdrom_info*, %struct.cdrom_info** %11, align 8
  store %struct.cdrom_info* %12, %struct.cdrom_info** %6, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = bitcast i8* %13 to %struct.cdrom_tochdr*
  store %struct.cdrom_tochdr* %14, %struct.cdrom_tochdr** %7, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %16 = call i32 @ide_cd_read_toc(%struct.TYPE_6__* %15, i32* null)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %9, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = load i32, i32* %9, align 4
  store i32 %20, i32* %3, align 4
  br label %37

21:                                               ; preds = %2
  %22 = load %struct.cdrom_info*, %struct.cdrom_info** %6, align 8
  %23 = getelementptr inbounds %struct.cdrom_info, %struct.cdrom_info* %22, i32 0, i32 0
  %24 = load %struct.atapi_toc*, %struct.atapi_toc** %23, align 8
  store %struct.atapi_toc* %24, %struct.atapi_toc** %8, align 8
  %25 = load %struct.atapi_toc*, %struct.atapi_toc** %8, align 8
  %26 = getelementptr inbounds %struct.atapi_toc, %struct.atapi_toc* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.cdrom_tochdr*, %struct.cdrom_tochdr** %7, align 8
  %30 = getelementptr inbounds %struct.cdrom_tochdr, %struct.cdrom_tochdr* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  %31 = load %struct.atapi_toc*, %struct.atapi_toc** %8, align 8
  %32 = getelementptr inbounds %struct.atapi_toc, %struct.atapi_toc* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.cdrom_tochdr*, %struct.cdrom_tochdr** %7, align 8
  %36 = getelementptr inbounds %struct.cdrom_tochdr, %struct.cdrom_tochdr* %35, i32 0, i32 0
  store i32 %34, i32* %36, align 4
  store i32 0, i32* %3, align 4
  br label %37

37:                                               ; preds = %21, %19
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32 @ide_cd_read_toc(%struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
